@@ -58,6 +58,7 @@ void showHelp(enum helpType kind) {
             + "\n" + string(BOLDBLUE) + "GENERAL\n" + RESET
             + "   --profile [name]    Use the specified profile for the current run.\n"
             + "   --save              Save all the specified settings to the specified profile.\n"
+            + "   --all               Execute all profiles sequentially\n"
             + "   -0                  Provide a summary of backups.\n"
             + "   -1                  Provide detail of backups.\n"
             + "   --install           Install this binary in /usr/local/bin, update directory perms and create the man page.\n"
@@ -116,8 +117,22 @@ that have identical content together to save disk space.
 
 
 string manPathContent() {
-return string(R"END(.\" Automatically generated by Pandoc 2.17.0.1
+return string(R"END(.\" Automatically generated by Pandoc 2.17.1.1
 .\"
+.\" Define V font for inline verbatim, using C font in formats
+.\" that render this, and otherwise B font.
+.ie "\f[CB]x\f[]"x" \{\
+. ftr V B
+. ftr VI BI
+. ftr VB B
+. ftr VBI BI
+.\}
+.el \{\
+. ftr V CR
+. ftr VI CI
+. ftr VB CB
+. ftr VBI CBI
+.\}
 .TH "MANAGEBACKUPS" "1" "January 2022" "managebackups 1.2.5" ""
 .hy
 .SH NAME
@@ -191,6 +206,11 @@ writes from that group.
 /usr/local/share/man/man1.
 It\[cq]s designed for a one-time execution as \f[B]sudo managebackups
 \[en]install\f[R] after which root access is no longer required.
+Alternatively, all files (config, cache, log) can be written under the
+calling user\[cq]s home directory via the \f[B]\[en]user\f[R] option.
+But for that setup \f[B]\[en]user\f[R] must be specified on every
+invocation.
+See \f[B]\[en]user\f[R] for more detail.
 .TP
 \f[B]\[en]installman\f[R]
 Only install the man page to /usr/local/share/man/man1.
@@ -201,6 +221,13 @@ Use \f[I]profile\f[R] for the current run.
 \f[B]\[en]save\f[R]
 Save the currently specified settings (everything on the command line)
 with the specified profile name.
+.TP
+\f[B]-a\f[R], \f[B]\[en]all\f[R]
+Execute all profiles sequentially.
+Can be specified by itself to prune, link, and execute backups
+(whatever\[cq]s configured) for all profiles.
+Or can be combined with limiting options like \f[B]\[en]nobackup\f[R],
+\f[B]\[en]noprune\f[R].
 .TP
 \f[B]-0\f[R]
 Provide a summary of backups.
@@ -466,6 +493,24 @@ was taken before removing any older files.
 Because \f[B]\[en]save\f[R] was not specified the \f[B]\[en]daily
 10\f[R] (and paranoid setting) is only for this run and doesn\[cq]t
 become part of the mymac profile moving forward.
+.TP
+\f[B]managebackups -p mymac -q\f[R]
+Re-run the mymac profile with its last saved configuration
+(i.e.\ what\[cq]s in example #2, not #3).
+Quiet mode disables all screen output except for errors.
+.TP
+\f[B]managebackups -a\f[R]
+Execute all currently defined profiles.
+If the above three examples had been run previously two profiles
+(homedirs & mymac) would have been defined, each with the associated
+parameters on their respective \f[B]\[en]save\f[R] runs.
+This \f[B]-a\f[R] invocation would run through each of those profiles
+sequentially performing the configured pruning, hard linking and
+backups.
+.TP
+\f[B]managebackups -a \[en]nobackup\f[R]
+Execute all currently defined profiles but don\[cq]t perform backups
+\[en] only pruning and linking as configured within each profile.
 .TP
 \f[B]managebackups \[en]directory /opt/backups \[en]file pegasus.tgz \[en]cmd \[lq]ssh pegasus tar -czf - /home\[rq] \[en]scp me\[at]remoteserver:/var/backups/{subdir}/{file} \[en]prune \[en]fp\f[R]
 Tar up /home from the pegasus server and store it in
